Simplify and re-word

--- a/index.html
+++ b/index.html
@@ -19,20 +19,9 @@
       <h2>Summary</h2>
 
       <ul class="summary-list">
+        <li>Built a successful ecommerce SaaS application from the ground up</li>
         <li>Proven abililty to learn and apply new concepts quickly</li>
-        <li>Experience creating production applications from the ground up</li>
-        <li>
-          Proficient with the following languages and technologies:
-
-          <ul class="technology-list">
-            <li>Ruby on Rails</li>
-            <li>Python</li>
-            <li>JavaScript</li>
-            <li>HTML + CSS</li>
-            <li>Postgres</li>
-            <li>Redis</li>
-          </ul>
-        </li>
+        <li>Passionate about developing and contributing to open source software</li>
       </ul>
 
       <hr/>
@@ -53,7 +42,7 @@
         </p>
 
         <ul>
-          <li>Solely designed, developed and deployed all backend infrastructure</li>
+          <li>Solely designed, developed, and deployed all backend infrastructure</li>
           <li>Maintained Ruby on Rails, Postgres, and NGINX servers on Heroku and AWS</li>
           <li>Collaborated with consumers, merchants and peers to make informed product decisions</li>
         </ul>
@@ -82,10 +71,9 @@
           Worked as a full stack developer with a focus on backend infrastructure.
         </p>
         <ul>
-          <li>Implemented a referral fraud detection system</li>
-          <li>Responsible for opening up platform to 3rd party developers</li>
-          <li>Developed features in Ember.js and Ruby on Rails</li>
-          <li>Wrote design specifications and code for major infrastructure changes</li>
+          <li>Built public APIs and worked with external developers</li>
+          <li>Designed and executed major infrastructure changes</li>
+          <li>Primarily worked with Ruby on Rails, Postgres, Redis, and Kafka</li>
         </ul>
       </div>
 
@@ -106,7 +94,7 @@
       <ul>
         <li>Completed 6 different internships at NVIDIA, Bloomberg, Kik, and more</li>
         <li>Studied networking, algorithms, AI, DB, OS, privacy and security, software architecture</li>
-        <li>Academic experience with C, C++, Python, Racket, and JavaScript</li>
+        <li>Gained experience with Python, JavaScript, C++, C, and Racket</li>
       </ul>
     </div>
 
@@ -116,10 +104,6 @@
         line-height: 1.4em;
         display: flex;
         justify-content: center;
-      }
-
-      .technology-list {
-        columns: 2;
       }
 
       .heading {
