Grid + minimal aesthetic

--- a/index.html
+++ b/index.html
@@ -14,88 +14,104 @@
         <p>ctpassmore at gmail dot com</p>
       </div>
 
-      <hr/>
-
-      <h2>Summary</h2>
-
-      <ul class="summary-list">
-        <li>Built a successful ecommerce SaaS application from the ground up</li>
-        <li>Proven abililty to learn and apply new concepts quickly</li>
-        <li>Passionate about developing and contributing to open source software</li>
-      </ul>
-
-      <hr/>
-
-      <h2>Employment</h2>
-
-      <div class="flex-between">
-        <h3>
-          <a href="https://junip.co">Junip Inc.</a>
-        </h3>
-        <p class="location">Kitchener, Ontario</p>
+      <div class="section-heading section-heading-summary">
+        <h2>Summary</h2>
       </div>
 
-      <div class="position">
-        <p class="title">Co-founder &amp; CTO (Sep 2019 - Present)</p>
-        <p class="description">
-          Built a SaaS app that allows online stores to collect, moderate, and leverage customer reviews.
-        </p>
-
-        <ul>
-          <li>Solely designed, developed, and deployed all backend infrastructure</li>
-          <li>Maintained Ruby on Rails, Postgres, and NGINX servers on Heroku and AWS</li>
-          <li>Collaborated with consumers, merchants and peers to make informed product decisions</li>
+      <div class="section-content section-content-summary">
+        <ul class="summary-list">
+          <li>Built a successful ecommerce SaaS application from the ground up</li>
+          <li>Proven abililty to learn and apply new concepts quickly</li>
+          <li>Passionate about developing and contributing to open source software</li>
         </ul>
       </div>
 
-      <div class="flex-between">
-        <h3>
-          <a href="https://smile.io">Smile.io</a>
-        </h3>
-        <p class="location">Kitchener, Ontario</p>
+      <div class="section-heading section-heading-employment">
+        <h2>Employment</h2>
       </div>
-      <div class="position multi-position">
-        <ul class="title"><li>Team Lead (Feb 2019 - Sep 2019)</li></ul>
+
+      <div class="section-content section-content-employment">
+        <div class="position">
+          <div class="flex-between">
+            <div>
+              <h3 class="title">Co-founder &amp; CTO</h3>
+              <p><a href="https://junip.co">Junip Inc.</a></p>
+            </div>
+            <h3>Sep 2019 - Present</h3>
+          </div>
+          <p class="description">
+            Built a SaaS app that allows online stores to collect, moderate, and leverage customer reviews.
+          </p>
+
+          <ul>
+            <li>Solely designed, developed, and deployed all backend infrastructure</li>
+            <li>Maintained Ruby on Rails, Postgres, and NGINX servers on Heroku and AWS</li>
+            <li>Collaborated with consumers, merchants and peers to make informed product decisions</li>
+          </ul>
+        </div>
+
+        <div class="position">
+          <div class="flex-between">
+            <div>
+              <h3 class="title">Team Lead</h3>
+              <p><a href="https://smile.io">Smile Inc.</a></p>
+            </div>
+            <h3>Feb 2019 - Sep 2019</h3>
+          </div>
+
+          <p class="description">
+            Managed a team of 6 while continuing to make individual contributions.
+          </p>
+
+          <ul>
+            <li>Planned weekly sprints and mentored teammates</li>
+            <li>Designed software architecture for complex features</li>
+            <li>Recruited and hired new team members</li>
+          </ul>
+        </div>
+
+        <div class="position">
+          <div class="flex-between">
+            <div>
+              <h3 class="title">Software Engineer</h3>
+              <p><a href="https://smile.io">Smile Inc.</a></p>
+            </div>
+            <h3>May 2017 - Jan 2019</h3>
+          </div>
+
+          <p class="description">
+            Worked as a full stack developer with a focus on backend infrastructure.
+          </p>
+          <ul>
+            <li>Built public APIs and worked with external developers</li>
+            <li>Designed and executed major infrastructure changes</li>
+            <li>Primarily worked with Ruby on Rails, Postgres, Redis, and Kafka</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="section-heading section-heading-education">
+        <h2>Education</h2>
+      </div>
+
+      <div class="section-content section-content-education">
+        <div class="flex-between">
+          <div>
+            <h3 class="title">Bachelor of Computer Science</h3>
+            <p><a href="https://uwaterloo.ca">University of Waterloo</a></p>
+          </div>
+          <h3>Sep 2012 - Apr 2017</h3>
+        </div>
+
         <p class="description">
-          Managed a team of 6 while continuing to make individual contributions.
-        </p>
-
-        <ul>
-          <li>Planned weekly sprints and mentored teammates</li>
-          <li>Designed software architecture for complex features</li>
-          <li>Recruited and hired new team members</li>
-        </ul>
-
-        <ul class="title"><li>Software Engineer (May 2017 - Jan 2019)</li></ul>
-        <p class="description">
-          Worked as a full stack developer with a focus on backend infrastructure.
+          Obtained a BCS with honours while participating in the co-operative education program.
         </p>
         <ul>
-          <li>Built public APIs and worked with external developers</li>
-          <li>Designed and executed major infrastructure changes</li>
-          <li>Primarily worked with Ruby on Rails, Postgres, Redis, and Kafka</li>
+          <li>Completed 6 different internships at NVIDIA, Bloomberg, Kik, and more</li>
+          <li>Studied networking, algorithms, AI, DB, OS, privacy and security, software architecture</li>
+          <li>Gained experience with Python, JavaScript, C++, C, and Racket</li>
         </ul>
       </div>
-
-      <hr/>
-
-      <h2>Education</h2>
-
-      <div class="flex-between">
-        <h3>
-          <a href="https://uwaterloo.ca">University of Waterloo</a>
-        </h3>
-        <p class="location">Waterloo, Ontario</p>
-      </div>
-      <p class="title">Bachelor of Computer Science (Sep 2012 - Apr 2017)</p>
-      <p class="description">
-        Obtained a BCS with honours while participating in the co-operative education program.
-      </p>
-      <ul>
-        <li>Completed 6 different internships at NVIDIA, Bloomberg, Kik, and more</li>
-        <li>Studied networking, algorithms, AI, DB, OS, privacy and security, software architecture</li>
-        <li>Gained experience with Python, JavaScript, C++, C, and Racket</li>
-      </ul>
     </div>
 
     <style>
@@ -107,11 +123,17 @@
       }
 
       .heading {
-        text-align: center;
+        grid-column-start: 2;
       }
 
       .resume {
-        max-width: 60em;
+        max-width: 65em;
+        display: grid;
+        grid-template-columns: 1fr 4fr;
+        grid-column-gap: 4em;
+        grid-row-gap: 1em;
+        padding-top: 2em;
+        padding-bottom: 2em;
       }
 
       a {
@@ -123,25 +145,12 @@
         text-decoration: underline;
       }
 
-      hr {
-        margin-top: 2em;
-        margin-bottom: 2em;
-      }
-
       ul {
-        padding-left: 1.5em;
+        padding-left: 1em;
       }
 
       .position {
         margin-bottom: 2em;
-      }
-
-      .multi-position {
-        padding-left: 1em;
-      }
-
-      ul.title {
-        padding-left: 0;
       }
 
       .flex-between {
@@ -151,8 +160,23 @@
         margin-bottom: 1em;
       }
 
-      .flex-between p, .flex-between h3, .flex-between ul {
+      .flex-between p, .flex-between h3 {
         margin: 0;
+      }
+
+      .position-title-block {
+        padding-left: 0.5em;
+        border-left: 0.3em solid black;
+        margin-top: 1.5em;
+        margin-bottom: 1.5em;
+      }
+
+      .section {
+        display: flex;
+      }
+
+      .section-heading {
+        text-align: right;
       }
     </style>
   </body>
