Update employment history

--- a/index.html
+++ b/index.html
@@ -34,10 +34,48 @@
         <div class="position">
           <div class="flex-between">
             <div>
+              <h3 class="title">Software Developer</h3>
+              <p><a href="https://junip.co">Junip Inc.</a></p>
+            </div>
+            <h3>Jul 2022 - Present</h3>
+          </div>
+          <p class="description">
+            Worked as an individual contributor focused on building Junp's Ruby on Rails API monolith.
+          </p>
+
+          <ul>
+            <li>Architected and implemented core platform features</li>
+            <li>Developed, maintained, and scaled infrastructure</li>
+          </ul>
+        </div>
+
+        <div class="position">
+          <div class="flex-between">
+            <div>
+              <h3 class="title">Senior Software Engineer</h3>
+              <p><a href="https://www.wealthsimple.com">Wealthsimple</a></p>
+            </div>
+            <h3>Nov 2021 - Jun 2022</h3>
+          </div>
+          <p class="description">
+            Worked as a core member of the Enablement Engineering team.
+          </p>
+
+          <ul>
+            <li>Designed and built an internal tool for posting large volumes of transactions</li>
+            <li>Regularly planned sprints for 6 developers</li>
+            <li>Collaborated with co-workers across multiple departments</li>
+            <li>Provided timely and informative project updates for dozens of stakeholders</li>
+          </ul>
+        </div>
+
+        <div class="position">
+          <div class="flex-between">
+            <div>
               <h3 class="title">Co-founder &amp; CTO</h3>
               <p><a href="https://junip.co">Junip Inc.</a></p>
             </div>
-            <h3>Sep 2019 - Present</h3>
+            <h3>Sep 2019 - Oct 2021</h3>
           </div>
           <p class="description">
             Built a SaaS app that allows online stores to collect, moderate, and leverage customer reviews.
