--- a/index.html
+++ b/index.html
@@ -153,11 +153,25 @@
     </div>
 
     <style>
+      :root {
+        --background-color: white;
+        --font-color: black;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --background-color: #111111;
+          --font-color: #cecece;
+        }
+      }
+
       body {
         font-family: monospace;
         line-height: 1.4em;
         display: flex;
         justify-content: center;
+        color: var(--font-color);
+        background-color: var(--background-color);
       }
 
       .heading {
