Add more spacing around text

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
         padding-left: 1em;
       }
 
+      li {
+        margin: 0.1rem 0;
+      }
+
       .position {
         margin-bottom: 2em;
       }
@@ -213,7 +217,7 @@
       }
 
       .flex-between p, .flex-between h3 {
-        margin: 0;
+        margin-top: 0;
       }
 
       .section {
